tests/compilefail12.out
[1mtests/compilefail12.pas:10:1: [0m[1m[91merror:[0m Semicolon expected
    10 | begin